# hinge-farm-ai-agent

./: .gitignore  README.md  docker-compose.yml  run-docker.sh
.github/workflows/: ruff.yml
app/: agent_config.py  gemini_analyzer.py  helper_functions.py  langgraph_hinge_agent.py  main_agent.py  prompt_engine.py  pyproject.toml  test_cv_send_button.py  test_gemini_agent.py
docker/: Dockerfile  README.md  env.example
